# chat-multi-channel

./: .gitignore  CMakeLists.txt  ChatController.cpp  ChatController.h  MainWindow.cpp  MainWindow.ui  Message.h  NetworkManager.cpp  README.md
client/: ClientSocket.cpp  ClientSocket.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessageFactory.h  main.cpp  resources.qrc
server/: ChatServer.cpp  ChatServer.h  Main.cpp  main.cpp
temp/: MainWindow.h  MessageFactory.h  NetworkManager.h
